--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -25,6 +25,7 @@
         "prettier"
     ],
     "rules": {
+        "react/button-has-type": "off",
         "linebreak-style": 0,
         "import/prefer-default-export": 0,
         "import/extensions": 0,
